// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeSkills renders component 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Seek comfort in the familiar: wear your comfiest shirt or change your phone’s home screen photo to an old favorite.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Don’t rush. Take your time to get work done right.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Familiar scents can bring back fond memories. Think about happy times and the smells that went along with them.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        What worked before? Tell coworkers about a challenge you experienced in the past, and how you worked through it.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Take the “chunking” approach. Focus on the next 20 minutes and what you’ll work on then, rather than months at a time.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders component with available dimension skills 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Don’t rush. Take your time to get work done right.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Familiar scents can bring back fond memories. Think about happy times and the smells that went along with them.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        What worked before? Tell coworkers about a challenge you experienced in the past, and how you worked through it.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Take the “chunking” approach. Focus on the next 20 minutes and what you’ll work on then, rather than months at a time.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders component with available types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="leading_others"
      >
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_leading_others, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Your team appreciates when you share what you know. Build a routine to provide everyone with updates, and prepare to include occasional reminders of the team’s higher level vision.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Seek out a helping hand. Check in with your coworkers for the purpose of ensuring that deadlines are on track, expectations are met, and nothing is being overlooked.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        You’re comfortable staying out of the spotlight. Discuss a high-impact decision with your team and present the end result as a group effort.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Moving on after a coworker makes a mistake frees up energy to meet future goals. Focus on the opportunity to learn from the experience so as to avoid making the same mistake.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Is your organization not taking the time to listen to customers? Think of how a “culture of listening” could be integrated into the customer experience.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders component with enabled types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="leading_others"
      >
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_leading_others, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Your team appreciates when you share what you know. Build a routine to provide everyone with updates, and prepare to include occasional reminders of the team’s higher level vision.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Seek out a helping hand. Check in with your coworkers for the purpose of ensuring that deadlines are on track, expectations are met, and nothing is being overlooked.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        You’re comfortable staying out of the spotlight. Discuss a high-impact decision with your team and present the end result as a group effort.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Moving on after a coworker makes a mistake frees up energy to meet future goals. Focus on the opportunity to learn from the experience so as to avoid making the same mistake.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Is your organization not taking the time to listen to customers? Think of how a “culture of listening” could be integrated into the customer experience.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders new type from clicking button 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="leading_others"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_leading_others, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Your team appreciates when you share what you know. Build a routine to provide everyone with updates, and prepare to include occasional reminders of the team’s higher level vision.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Seek out a helping hand. Check in with your coworkers for the purpose of ensuring that deadlines are on track, expectations are met, and nothing is being overlooked.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        You’re comfortable staying out of the spotlight. Discuss a high-impact decision with your team and present the end result as a group effort.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Moving on after a coworker makes a mistake frees up energy to meet future goals. Focus on the opportunity to learn from the experience so as to avoid making the same mistake.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Is your organization not taking the time to listen to customers? Think of how a “culture of listening” could be integrated into the customer experience.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders new type from selecting option 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_leading_others, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_leading.png"
        />
        <div
          className="name"
        >
          skill_name_for_leading_others, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="leading_others"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="leading_others"
        >
          skill_name_for_leading_others, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_leading_others, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Your team appreciates when you share what you know. Build a routine to provide everyone with updates, and prepare to include occasional reminders of the team’s higher level vision.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Seek out a helping hand. Check in with your coworkers for the purpose of ensuring that deadlines are on track, expectations are met, and nothing is being overlooked.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        You’re comfortable staying out of the spotlight. Discuss a high-impact decision with your team and present the end result as a group effort.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Moving on after a coworker makes a mistake frees up energy to meet future goals. Focus on the opportunity to learn from the experience so as to avoid making the same mistake.
      </li>
      <li
        style={
          Object {
            "background": "rgba(0,0,0,0.1)",
          }
        }
      >
        Is your organization not taking the time to listen to customers? Think of how a “culture of listening” could be integrated into the customer experience.
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if no skills 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if results not ready 1`] = `null`;
